--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* body {
+body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -7,7 +7,7 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
+/* code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 } */
@@ -21,17 +21,3 @@ code {
 html {
 	font-family: "Noto Sans JP", sans-serif;
 }
-
-body {
-	margin: 0;
-	/* background-color: #3f3f3f; */
-}
-/* .nav {
-	display: flex;
-	justify-content: space-around;
-	color: white;
-	background-color: white;
-}
-.nav .logo {
-	color: aqua;
-} */
