--- a/src/styles/TaskItem.css
+++ b/src/styles/TaskItem.css
@@ -2,8 +2,12 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	color: rgb(189, 171, 171);
 }
 .taskitem {
 	border-radius: 20px;
 	border: 2px solid blueviolet;
+	background-color: rgb(73, 70, 70);
+	margin-left: 15%;
+	margin-right: 15%;
 }
