mapping data to taskitem, styling the task and taskItem component

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	/* color: white; */
-	background-color: white;
+	/* background-color: rgb(184, 160, 160); */
 	margin-left: 60px;
 	margin-right: 200px;
 	align-items: center;
