--- a/src/styles/Tasks.css
+++ b/src/styles/Tasks.css
@@ -1,6 +1,8 @@
 .tasks {
 	background-color: rgb(44, 42, 42);
-	margin-left: 25%;
-	margin-right: 25%;
+	margin-left: 15%;
+	margin-right: 15%;
 	border-radius: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
