more styiling, adding button, taskitem updated

--- a/src/styles/TaskItem.css
+++ b/src/styles/TaskItem.css
@@ -12,8 +12,10 @@
 	margin-right: 15%;
 	font-size: 12px;
 	margin-bottom: 10px;
+	padding-bottom: 30px;
 }
 .desc {
 	color: rgb(189, 171, 171);
 	font-size: 15px;
+	margin-bottom: 30px;
 }
