--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	/* width: 80%; */
+	background-color: rgb(226, 217, 230);
 }
 
 /* code {
