--- a/src/styles/TaskItem.css
+++ b/src/styles/TaskItem.css
@@ -19,3 +19,9 @@
 	font-size: 15px;
 	margin-bottom: 30px;
 }
+input {
+	margin-right: 10px;
+	margin-left: 10px;
+	border-radius: 5px;
+	border: none;
+}
