--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,13 +1,18 @@
 .nav {
 	display: flex;
 	justify-content: space-between;
-	/* color: white; */
-	/* background-color: rgb(184, 160, 160); */
 	margin-left: 60px;
 	margin-right: 200px;
 	align-items: center;
 	font-size: 20px;
 }
+.nav > div {
+	width: 30rem;
+}
 .nav .logo {
 	color: blueviolet;
+}
+.links {
+	display: flex;
+	justify-content: space-between;
 }
