footer content and styling

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,11 @@
 .footer-cont {
-	background-color: rgb(204, 192, 209);
+	/* background-color: red; */
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	margin-left: 25%;
+	margin-right: 25%;
+}
+.footer {
+	background-color: rgb(204, 192, 209);
 }
