--- a/src/styles/TaskItem.css
+++ b/src/styles/TaskItem.css
@@ -3,7 +3,7 @@
 	justify-content: space-around;
 	align-items: center;
 	color: rgb(14, 13, 13);
-	font-size: 24px;
+	font-size: 20px;
 }
 .taskitem {
 	border-radius: 20px;
@@ -26,6 +26,23 @@
 input {
 	margin-right: 10px;
 	margin-left: 10px;
-	border-radius: 5px;
+	border-radius: 10px;
 	border: none;
+	padding: 15px;
+}
+input[type="submit"] {
+	/* background-color: blueviolet; */
+	padding: 10px 20px 10px 20px;
+	/* padding-right: 20px; */
+	border-radius: 20px;
+}
+input[type="submit"]:hover {
+	background-color: blueviolet;
+	font-size: 20px;
+}
+label {
+	font-size: 20px;
+}
+input :focus {
+	border: 1px solid blueviolet;
 }
