--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,6 +5,7 @@
 	align-items: center;
 	margin-left: 25%;
 	margin-right: 25%;
+	/* text-align: left; */
 }
 .footer {
 	background-color: rgb(204, 192, 209);
