--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -11,6 +11,7 @@ button {
 	border-radius: 20px;
 	padding: 10px;
 	margin-right: 60px;
+	font-size: 15px;
 }
 #download {
 	background-color: blueviolet;
